# ICE4131-HPC

./: Makefile  README.md  caption.css
LAB1/: README.md  topology.eps
LAB2/: README.md
LAB3/: CMakeLists.txt  README.md
LAB3-ray-tracing/: README.md
LAB3/include/: Image.h  PthreadImage.h
LAB3/src/: Image.cxx  PthreadImage.cxx
LAB4/: CMakeLists.txt  README.md  performanceFlip.plt  performanceLogFilter.plt  run.sh  submit1.sh  submit2.sh
LAB4-ray-tracing-omp/: README.md
LAB4-ray-tracing-pthread/: README.md
LAB4/src/: OpenMPImage.cxx  flip.cxx
LAB5/: CMakeLists.txt  README.md  env.sh  flipH.sh  flipV.sh  log.sh  performanceFlip.plt  run.sh  submit1.sh
LAB5-ray-tracing-MPI/: README.md
LAB5-ray-tracing-omp/: README.md
LAB5/include/: MPIImage.h
LAB5/src/: MPIImage.cxx  flip.cxx  log.cxx
LAB6/: CMakeLists.txt  README.md  env.sh  performanceFlip.plt  performanceLogFilter.plt  run.sh  submit1.sh  submit2.sh
LAB6-ray-tracing-MPI/: README.md
LAB6-ray-tracing-MPI-omp/: README.md
LAB6/include/: CudaImage.h
LAB6/src/: CudaImage.cu  flip.cxx  log.cxx  test.txt
LAB7/: CMakeLists.txt  README.md  env.sh  example1.cu  submit.sh
LAB7-ray-tracing-MPI-omp/: README.md
Lab-1/: ICE4131-Lab1.md  README.md
Lab-2/: README.md  submit.sh
Lab-2/include/: Image.h
Lab-3/: CMakeLists.txt  README.md
Lab-3/include/: Image.h  PthreadImage.h
Lab-3/src/: Image.cxx  PthreadImage.cxx  flip.cxx  log.cxx
Lab-4/: CMakeLists.txt  README.md
Lab-4/include/: OpenMPImage.h
Lab-4/src/: OpenMPImage.cxx  flip.cxx  log.cxx
Lecture-4/: CMakeLists.txt  chap4-performance.csv  chap4-performance.plt  chapter4-1.cxx  chapter4-2.cxx  chapter4-3-1.cxx  chapter4-3-2.cxx  chapter4-3-3.cxx  chapter4-3-4.cxx  chapter4-3-5.cxx  chapter4-3.cxx
Lecture-5/: CMakeLists.txt  chapter5-1.cxx  chapter5-2.cxx  chapter5-3.cxx  chapter5-4.cxx  chapter5-5.cxx
Lecture-6/: CMakeLists.txt  Chap6-HelloWorld-MPI-1.cxx  Chap6-HelloWorld-MPI-2.cxx  Chap6-HelloWorld-MPI-3.cxx  Chap6-HelloWorld-MPI-4.cxx  Chap6-HelloWorld-MPI-5.cxx  Chap6-HelloWorld-MPI-6.cxx  Chap6-HelloWorld-MPI-7.cxx  moduleload.sh  submit.sh
Lecture-7/: CMakeLists.txt  Chap7-Comm1-MPI.cxx  Chap7-Comm1.err  Chap7-Comm1.out  Chap7-Comm2-MPI.cxx  Chap7-Comm2.err  Chap7-Comm2.out  Chap7-Comm3-MPI.cxx  Chap7-Comm3.err  Chap7-Comm4-MPI.cxx  Chap7-Comm4.err  Chap7-Comm4.out  Chap7-HelloWorld-MPI.cxx  slurm-13280654.out  submit-comm1.sh  submit-comm2.sh  submit-comm3.sh  submit-comm4.sh  submit.sh
